# maritalk-api

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.bib  Dockerfile  LICENSE  Makefile  README-Local.md  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  documentation_deploy.yml
api/en/: batch-api-response.html  batch-api.html  completion-response.html  completion.html  endpoints.html  list-models-response.html  list-models.html  responses-api-response.html  responses-api.html
docs/: index.html  maritalk.html  search.js
docs_deprecated/: README-Local.md  README.md  index.html
documentation/: docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  sidebarsApi.js
en/: 404.html  index.html  sitemap.xml
examples/: google-cloud-vertex.md  google-cloud.md  maritalk-colab.ipynb  oracle-cloud.md  oracle.md
img/: price_vs_performance_en.html  price_vs_performance_ptbr.html
maritalk/: __init__.py  download.py  model.py  start.py  tokenizer.py  tokenizer_model.py  tokenizer_model_v4.py
pt/: Sabia-3+RAG.html  batch-api.html  biblioteca.html  cache-de-prompt.html  casos-de-uso.html  chamada-funcao.html  deletar-conta.html  descontinuado.html  embeddings+Sabia-3+RAG.html  embeddings+Sabia-4+RAG.html  embeddings.html  ferramentas.html  files.html  flex-tier.html  glossario.html  introducao.html  modelos.html  precos.html  rate-limits.html  responses-api.html  status.html  structured-outputs.html  system.html  visao-geral.html
sagemaker/: sabiazinho-3_example.ipynb
(+1536 files in other folders)
