[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maritalk"
version = "0.1.4"
authors = [
  { name="Maritaca AI", email="info@maritaca.ai" },
]
description = "Client library for the MariTalk API"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tqdm",
]

[tool.setuptools.packages]
find = {}

[project.urls]
"Homepage" = "https://github.com/maritaca-ai/maritalk-api"
"Bug Tracker" = "https://github.com/maritaca-ai/maritalk-api/issues"